<resources>

    <string name="app_name">Facebook-Test</string>
    <string name="app_desc">Test description</string>
    <string name="app_action">Test action - name</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">FB-Smirnov</string>
    <string name="logout">Logout</string>
    <string name="friends_page">Friends 2</string>
    <string name="friends">Friends</string>
    <string name="news">News</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait...</string>
    <string name="post_on_wall_title">Post on Wall?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_permission">Please check application permissions</string>
    <string name="is_end">End!</string>

</resources>