<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/main_menu_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            style="@style/main_menu"
            android:layout_width="65dip"
            android:layout_height="32dip"
            android:text="@string/news" />

        <Button
            android:id="@+id/button2"
            style="@style/main_menu"
            android:layout_width="65dip"
            android:layout_height="32dip"
            android:text="@string/friends" />

        <Button
            android:id="@+id/button3"
            style="@style/main_menu"
            android:layout_width="65dip"
            android:layout_height="32dip"
            android:text="@string/friends_page" />

        <ImageView
            android:id="@+id/test_pic"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:background="@drawable/ic_launcher" />

        <Button
            android:id="@+id/login"
            style="@style/main_menu"
            android:layout_width="65dip"
            android:layout_height="32dip"
            android:onClick="login"
            android:layout_marginLeft="-5dip"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/hello_world" />

</LinearLayout>